[gd_scene load_steps=7 format=3 uid="uid://ijyj2vmqstqj"]

[ext_resource type="Script" path="res://scripts/drone.gd" id="1_ho3or"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_wurl6"]
bounce = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_uj322"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hf8m7"]
radius = 1.62052

[sub_resource type="BoxMesh" id="BoxMesh_2jvkg"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5tqcf"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="drone" type="RigidBody3D"]
rotation_order = 0
collision_layer = 6
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_wurl6")
can_sleep = false
linear_damp = 0.1
script = ExtResource("1_ho3or")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.17, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_uj322")

[node name="Camera3person" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00425252, 0.353434, 1.92835)

[node name="Camera1person" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.989455, 0.14484, 0, -0.14484, 0.989455, 0.00640284, -4.9267e-05, -0.304829)

[node name="Area3D" type="Area3D" parent="."]
editor_description = "use_drone"
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_hf8m7")

[node name="drone" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="drone"]
transform = Transform3D(1, 0, 0, 0, 0.145, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_2jvkg")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="drone"]
transform = Transform3D(0.05, 0, -1.06581e-14, 0, 0.04, 0, 0, 0, 0.276, 0.381701, 0.112394, 0.472315)
mesh = SubResource("BoxMesh_2jvkg")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="drone"]
transform = Transform3D(0.05, 0, -1.06581e-14, 0, 0.04, 0, 0, 0, 0.276, 0.381701, 0.112394, -0.498988)
mesh = SubResource("BoxMesh_2jvkg")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="drone"]
transform = Transform3D(0.05, 0, -1.06581e-14, 0, 0.04, 0, 0, 0, 0.276, -0.424986, 0.112394, 0.472315)
mesh = SubResource("BoxMesh_2jvkg")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="drone"]
transform = Transform3D(0.05, 0, -1.06581e-14, 0, 0.04, 0, 0, 0, 0.276, -0.424985, 0.112394, -0.498988)
mesh = SubResource("BoxMesh_2jvkg")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_5tqcf")
